--- a/.github/workflows/test-deploy.yaml
+++ b/.github/workflows/test-deploy.yaml
@@ -26,4 +26,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy App
-        run: echo "Deploying app to ${{ github.ref_name }}-${{ github.event_name }}-${{ github.repository }} environment..."
+        run: echo "Deploying app to ${{ github.ref_name }}-${{ github.event_name }}-${{ github.repository }}-${{ github.run_number }} environment..."
